syntax = "proto3";

package simulator;

option go_package = "github.com/hijjiri/simulator/core/go/grpc-server/simulator";

service SimulatorService {
    rpc SimulateBattle(SimulateRequest) returns (SimulateResponse) {}
}

message SimulateRequest {
    int32 counts = 1;
    Deck simulate_offense_deck = 2;
    Deck simulate_defense_deck = 3;
}

message SimulateResponse {
    uint32 battle_id = 1;
    uint32 attacker = 2;
    uint32 defender = 3;
    map<uint32, int32> result_counts = 4;
}

message Deck {
    repeated DeckUnit units = 1;
}

message DeckUnit {
    uint32 hero_id = 1;
    repeated uint32 extension_ids = 2;
    repeated int32 skill_orders = 3;
    int32 hero_active_index = 4;
}
